# reca11-memory

./: .gitignore  LICENSE  README.md  pyproject.toml  reca11.py
backend/: main.py  models.py  prompts.py  routes.py  schemas.py  utils.py
backend/memory/: llm_utils.py  rag_utils.py
frontend/: docs.md  index.html
recall_core/: reca11.py
